# metsi-forestry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
doc/: operation-simualtor-and-model-function.drawio  simulator-and-model-function.drawio
forestryfunctions/: fhk.py  forestry_utils.py  r_utils.py
forestryfunctions/cross_cutting/: cross_cutting.py  cross_cutting_fhk.py  model.py  stem_profile.py
forestryfunctions/harvest/: cross_cutting.py  thinning.py
forestryfunctions/lua/: crosscut.lua
forestryfunctions/naturalprocess/: grow_acta.py  grow_motti.py  grow_stub.py
forestryfunctions/preprocessing/: age_supplementing.py  distributions.py  naslund.py  pre_util.py  tree_generation.py
forestryfunctions/r/cross_cutting/: cross_cutting_main.R
lukefi/metsi/forestry/: r_utils.py
lukefi/metsi/forestry/cross_cutting/: cross_cutting.py  cross_cutting_fhk.py  cross_cutting_lupa.py
lukefi/metsi/forestry/preprocessing/: distributions.py  pre_util.py  tree_generation.py
tests/: cross_cutting_test.py  forestry_utils_test.py  grow_acta_test.py  grow_stub_test.py  r_utils_test.py  test_util.py  thinning_test.py
tests/preprocessing_tests/: age_supplement_test.py  distributions_test.py  height_distribution_test.py  height_distributions_test.py  naslund_test.py  pre_util_test.py  reference_trees_from_height_distribution_test.py  tree_generation_test.py
tests/resources/cross_cutting/: cross_cutting_main.R
